[package]
name = "rust_study"
version = "0.1.0"
authors = ["sxend <arimitsu.k+github@gmail.com>"]

[dependencies]
hyper = "0.11.2"
futures = "0.1.14"
futures-cpupool = "0.1.5"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
time = "0.1.38"
tokio-io = "0.1.2"
tokio-core = "0.1.9"
iron = "0.5.1"
router = "0.5.1"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
regex = "0.2.2"